tests/ui/crate_type_flag.rs
//@ compile-flags: --crate-type dynlib

fn main() {}

//~? ERROR unknown crate type: `dynlib`
